- CHG: When "Ignore all whitespaces" is active and 
       "don't show whitespaces" then the line diff bar
       doesn't show those whitespaces. (Stefan)
- BUG: Remove compiler optimizations which lead 
       to a crash in the repo browser. (Stefan)
- BUG: Applying a patch which had the whole file
       deleted lead to a crash. (Stefan)

Version 1.0.1
- ADD: The dialog asking the user to enter an URL (e.g.
       for the repo browser) has now a history of
       the last used URL's for the user to select from. (Stefan)
- ADD: New option to use a short version of the date
       for log messages. (Thomas Epting)
- ADD: The property page now shows the subversion
       properties in a combobox. 
       There's also a tooltip showing additional
       information about the svn: properties. (Stefan)
- ADD: Ability to use different merge/diff programs
       for different filetypes. (Thomas Epting)
- ADD: Warn the user before creating a repository
       on a network share. (Stefan)
- ADD: Warn the user if (s)he tries to checkout/import
       via file to a repository on a network share. (Stefan)
- ADD: TortoiseMerge shows the line numbers 
       in the views. (Stefan)
- ADD: Autopatch function to patch all files 
       automatically. (Stefan)
- ADD: Line diff bar at the bottom of the two pane
       view, showing the two lines above each other
       (if the lines are different). Issue 88. (Stefan)
- ADD: A magnifier for the locatorbar in TME. (Stefan)
- CHG: Many cosmetic changes to the UI. (Stefan)
- CHG: The log dialog shows now the log messages
       in the fourth column (a short version) so
       you can see the logs without clicking on
       the revision. (Thomas Epting)
- CHG: The font combobox now only shows each font
       once. (Stefan)
- CHG: Updated TortoisePlink to 0.53b - now 
       includes proxy support. 
- BUG: If the "Check for updates" dialog is started
       for a file (not for a folder), the filename
       wasn't shown. (Stefan)