@@ -5,6 +5,8 @@
        to a crash in the repo browser. (Stefan)
 - BUG: Applying a patch which had the whole file
        deleted lead to a crash. (Stefan)
+- BUG: TortoiseMerge showed error when the mousepointer
+       moved past the last line in one-pane view. (Stefan)
 
 Version 1.0.1
 - ADD: The dialog asking the user to enter an URL (e.g.
